On-the-Fly .NET Compiler Project Changelog:

2.0.2 (2009.02.22)
[+] New options was added to XmlConfiguration: generate executable, generate dll, generate in memory, verbose level

[~] Errors and Events refactoring

2.0.1 (2008.12.24)
[+] Public preview release as open source project

1.0.1 (2007.06.03)
[+] Version 1.0 released as core module of the CHLOE project in ICIE