@@ -45,7 +45,7 @@ namespace OnTheFlyCompiler
 
 		private static void PrintUsage()
 		{
-			Console.WriteLine("Usage: fly -l <language> -f <path1;path2;..> -r <reference1;reference2;..> -p <MethodPath> -n <MethodName> [--debug] [--exe] [--memory] [-v <0-2>] [-w <0-4>] [--treat] | -x <XmlConfiguration>");
+			Console.WriteLine("Usage: fly -l <language> -f <path1;path2;..> -r <reference1;reference2;..> -p <MethodPath> -n <MethodName> [--debug] [--exe | dll] [--memory | disk] [-v <0-2>] [-w <0-4>] [--treat] | -x <XmlConfiguration>");
 		}
 	}
 }
